sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: ')' expected but ',' found.
  while (plusPetit i:Int,i+1:Int==false){
                        ^AlgBubbleSort1:11: error: illegal start of simple expression
} 
^